Tweaked a couple of styles in media query

--- a/responsive-web-design-projects/build-a-technical-documentation-page/style.css
+++ b/responsive-web-design-projects/build-a-technical-documentation-page/style.css
@@ -46,10 +46,16 @@ code {
   body {
     margin: 0px;
   }
+  
   nav {
     position: static;
     width: 100%;
-    padding: 20px;
+    height: auto;
+    align-items: flex-start;
+  }
+  
+  .nav-link {
+    display: none;
   }
   
   main {
