--- a/front-end-libraries-projects/build-a-markdown-previewer/src/App.css
+++ b/front-end-libraries-projects/build-a-markdown-previewer/src/App.css
@@ -11,12 +11,17 @@ body {
 }
 
 .right-content {
-  border: 1px solid black;
+  border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .right-content,
 .left-content {
   margin: 50px;
+}
+
+textarea,
+.right-content {
+  box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.1);
 }
 
 #editor {
