--- a/front-end-libraries-projects/build-a-drum-machine/src/App.css
+++ b/front-end-libraries-projects/build-a-drum-machine/src/App.css
@@ -1,1 +1,39 @@
+body {
+  box-sizing: border-box;
+}
 
+#drum-machine {
+  width: 100vw;
+  height: 100vh;
+  display: grid;
+  grid-template-rows: 1fr 2fr;
+  grid-template-columns: 100%;
+  justify-items: center;
+  align-items: center;
+  text-align: center;
+  font-size: 30px;
+}
+
+#display {
+  text-transform: capitalize;
+}
+
+.drum-pads-container {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  font-size: 20px;
+}
+
+.drum-pad {
+  background-color: black;
+  color: white;
+  padding: 30px;
+}
+
+.drum-pad:hover {
+  cursor: pointer;
+  opacity: 0.85;
+}
