--- a/front-end-libraries-projects/build-a-javascript-calculator/src/App.css
+++ b/front-end-libraries-projects/build-a-javascript-calculator/src/App.css
@@ -1,1 +1,97 @@
+body {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calculator {
+  display: grid;
+  grid-template-areas: 'equation equation equation equation'
+                       'display display display display'
+                       'clear clear divide multiply'
+                       'seven eight nine minus'
+                       'four five six plus'
+                       'one two three equals'
+                       'zero zero decimal equals';
+  width: 400px;
+  height: 600px;
+}
+
+#equation-display {
+  grid-area: equation;
+}
+
+#display {
+  grid-area: display;
+}
+
+#clear {
+  grid-area: clear;
+}
+
+#divide {
+  grid-area: divide;
+}
+
+#multiply {
+  grid-area: multiply;
+}
+
+#seven {
+  grid-area: seven;
+}
+
+#eight {
+  grid-area: eight;
+}
+
+#nine {
+  grid-area: nine;
+}
+
+#minus {
+  grid-area: minus;
+}
+
+#four {
+  grid-area: four;
+}
+
+#five {
+  grid-area: five;
+}
+
+#six {
+  grid-area: six;
+}
+
+#plus {
+  grid-area: plus;
+}
+
+#one {
+  grid-area: one;
+}
+
+#two {
+  grid-area: two;
+}
+
+#three {
+  grid-area: three;
+}
+
+#equals {
+  grid-area: equals;
+}
+
+#zero {
+  grid-area: zero;
+}
+
+#decimal {
+  grid-area: decimal;
+}
 
